--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.jayway.jsonpath:json-path:2.7.0'
     implementation "androidx.room:room-runtime:2.5.0"
+    implementation 'androidx.test:monitor:1.6.1'
+    implementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'junit:junit:4.12'
     annotationProcessor "androidx.room:room-compiler:2.5.0"
-    
+
 
 }
